--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"); */
-/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 
 @tailwind base;
@@ -7,11 +5,9 @@
 @tailwind utilities;
 
 body {
-  /* font-family: "Lexend Deca", sans-serif; */
-  /* font-family: "Nunito Sans", sans-serif; */
   font-family: "Plus Jakarta Sans", sans-serif;
   /* background-color: #ecf0f1; */
-  background-color: #ecf0f1;
+  background-color: #ffff;
   &::-webkit-scrollbar {
     width: 10px; /* Ancho de la barra de desplazamiento */
     border-radius: 2px; /* Bordes redondeados */
@@ -30,7 +26,7 @@ body {
     border-radius: 2px; /* Bordes redondeados para el pulgar */
   }
   &::-webkit-scrollbar-thumb:hover {
-    background: rgb(211, 237, 255); /* Color al pasar el mouse por encima */
+    background: rgb(53, 53, 53); /* Color al pasar el mouse por encima */
   }
   /* background-color: rgb(255, 255, 255); */
 }
@@ -55,7 +51,7 @@ body {
     border-radius: 2px; /* Bordes redondeados para el pulgar */
   }
   &::-webkit-scrollbar-thumb:hover {
-    background: rgb(211, 237, 255); /* Color al pasar el mouse por encima */
+    background: rgb(67, 67, 67); /* Color al pasar el mouse por encima */
   }
 }
 
